--- a/password-authenticator-backend/package.json
+++ b/password-authenticator-backend/package.json
@@ -5,17 +5,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongosh": "^2.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
