--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-            - name: Codecov
+            - name: Upload coverage reports to Codecov
   # You may pin to the exact commit or the version.
   # uses: codecov/codecov-action@e0b68c6749509c5f83f984dd99a76a1c1a231044
   uses: codecov/codecov-action@v4.0.1
   with:
     # Repository upload token - get it from codecov.io. Required only for private repositories
-    token: # optional
+    token: ${{ secrets.CODECOV_TOKEN }}
     # Specify the path to the Codecov YML
     codecov_yml_path: # optional
     # Override to specify the parent commit SHA
@@ -56,7 +56,7 @@
     # Used when not in git/hg project to identify project root directory
     root_dir: # optional
     # Specify the slug manually (Enterprise use)
-    slug: # optional
+    slug: omgitsvaibhav/passwordValidator
     # Specify the base url to upload (Enterprise use)
     url: # optional
     # Use the legacy upload endpoint
