--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,6 @@ jobs:
           with:
             node-version: 16.18
         - name: install dependencies
-          run: npm i
+          run: npm ci
         - name: Run tests
           run: npm test
