--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- After cloning the app, make sure to install all the packages (refer to the package.json file). Make sure you install the packages **_IN THE BACKEND FOLDER ONLY_**. <br/>\r - Create an account on Mongodb and make a new project.<br/>\r - Use the Mongodb connection uri in the code that you cloned. Make sure to \r **_note down the username and password_** \r while setting up the project as it will be needed for the uri.<br/>\r - run npm start in the backend directory to start the server.<br/>\r - open another console and to test the server, run: \r   > Invoke-WebRequest -Uri \"http://localhost:port_number/api/v1/password/storepassword\" -Method POST -Headers @{\"Content-Type\"=\"application/json\"} -Body '{\"password\": \"test_password\"}'",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo 'test completed'"
   },
   "author": "",
   "license": "ISC"
